# AudioMix

./: .gitignore  AudioMix.sln  CMakeLists.txt  LICENSE  README.md
AudioMix/: AudioMix.vcxproj  AudioMix.vcxproj.filters
AudioMix/src/: AudioEndpointException.h  AudioMix.h  AudioServiceNotRunning.h  AudioSession.cpp  AudioSession.h  AudioSessionFactory.cpp  ConsoleLogger.cpp  ConsoleLogger.h  Exceptions.h  GetProcessNameException.h  ILogger.h  IServer.h  IServerObserver.h  MapperConfig.h  Mixer.cpp  Mixer.h  MockServer.cpp  MockServer.h  NameOf.h  Normalizer.cpp  Normalizer.h  OpenProcessException.h  ProcessHandler.cpp  ProcessHandler.h  ServerConfig.h  ServerMessage.h  SliderMapper.cpp  SliderMapper.h  main.cpp
include/: AudioMix.h  AudioSession.h  AudioSessionFactory.h  ComPortServer.h  ConsoleLogger.h  CreateFileException.h  Exceptions.h  GetDeviceConfigurationException.h  GetProcessNameException.h  ILogger.h  IPlatformPortSerializer.h  IServer.h  IServerObserver.h  MapperConfig.h  Mixer.h  MockServer.h  OpenProcessException.h  PortSerializer.h  PortSerializerLinux.h  PortSerializerWin32.h  ProcessHandler.h  ServerMessage.h  SetDeviceConfigurationException.h  SliderMapper.h
sketch/: sketch.ino
src/: AudioSession.cpp  AudioSessionFactory.cpp  ComPortServer.cpp  ConsoleLogger.cpp  Mixer.cpp  MockServer.cpp  Normalizer.cpp  PortSerializer.cpp  PortSerializerLinux.cpp  PortSerializerWin32.cpp  ProcessHandler.cpp  SliderMapper.cpp  main.cpp
